Fix menu jumping

--- a/_includes/critical.scss
+++ b/_includes/critical.scss
@@ -194,6 +194,7 @@ $menu-width: 32rem;
   ul {
   	list-style: none;
   	margin: 0;
+    padding: 0;
   	width: 100%;
 
   	li {
